--- a/healthconnect/templates/home.html
+++ b/healthconnect/templates/home.html
@@ -5,6 +5,6 @@
     <title>Home Page</title>
 </head>
 <body>
-    <h1>Welcome to the Home Page!</h1>
+    <h1>Welcome to the Health Connect!</h1>
 </body>
 </html>
