--- a/healthconnect/apps/accounts/templates/accounts/login.html
+++ b/healthconnect/apps/accounts/templates/accounts/login.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Login</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+{% block title %}
+    Login
+{% endblock %}
+
+{% block content %}
     <h1>Login</h1>
     <form method="post">
         {% csrf_token %}
@@ -11,6 +11,4 @@
         <button type="submit">Login</button>
     </form>
     <p><a href="{% url 'home' %}">Back to Home</a></p>
-</body>
-</html>
-
+{% endblock %}
