--- a/healthconnect/templates/layout.html
+++ b/healthconnect/templates/layout.html
@@ -1,17 +1,27 @@
-<!DOCTYPE = html>
+<!DOCTYPE html>
 {% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Title{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'accounts/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
     <nav class="navbar">
-        <a href="{% url 'home' %}" class="nav-link">Home</a>
-        <a href="{% url 'about' %}" class="nav-link">About</a>
-        <a href="{% url 'login' %}" class="nav-link">Login</a>
+        <div class="logo">
+            <img src="{% static 'images/templogo.webp' %}" alt="Logo" height="60"> 
+        </div>
+        <div class="nav-links">
+            <a href="{% url 'home' %}" class="nav-link">Home</a>
+            <a href="{% url 'about' %}" class="nav-link">About us</a>
+            <a href="{% url 'about' %}" class="nav-link">Services</a>
+            <a href="{% url 'about' %}" class="nav-link">Pharmacy</a>
+        </div>
+        <div class="nav-links">
+            <a href="{% url 'login' %}" class="login-link">Login</a>
+            <a href="{% url 'register' %}" class="register-link">Register</a>
+        </div>
     </nav>
     <main>
         {% block content %}
@@ -19,3 +29,4 @@
         {% endblock %}
     </main>
 </body>
+</html>
