--- a/healthconnect/static/css/styles.css
+++ b/healthconnect/static/css/styles.css
@@ -4,13 +4,32 @@ body {
     padding: 0;
 }
 
+main {
+    padding-inline: 10%;
+}
+
 .navbar {
-    background-color: #009259;
+    background-color: #009678;
     padding: 1em;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
+/* Alternative navbar styling
+.navbar {
+    background-color: #009678;
+    padding: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+}
+*/
 
 .navbar .logo {
     margin-right: 1em;
@@ -36,10 +55,12 @@ body {
 /* Login button styling */
 .navbar .login-link {
     background-color: #00b6ff;
-    padding: 1em 5em;
+    padding: 1.3em 6em;
     border-radius: 5px;
+    border: none;
     color: white;
     text-decoration: none;
+    cursor: pointer; 
 }
 
 .navbar .login-link:hover {
@@ -49,20 +70,18 @@ body {
 
 /* Register button styling */
 .navbar .register-link {
-    background-color: #00b6ff;
-    padding: 1em 5em;
+    background-color: #ff7800;
+    padding: 1.3em 6em;
     border-radius: 5px;
+    border: none;
     color: white;
     text-decoration: none;
+    cursor: pointer; 
 }
 
 .navbar .register-link:hover {
-    background-color: blue;
+    background-color: #ff2300;
     text-decoration: none; 
-}
-
-main {
-    padding: 2em;
 }
 
 /* Logout button styling */
@@ -81,18 +100,24 @@ main {
     text-decoration: none; 
 }
 
+/* Home styles */
+.image-section img {
+    max-width: 500px; 
+    height: auto;
+    margin-top: -110px;
+    float: right; 
+}
+
 @media (max-width: 1024px) {
+    
     .navbar .nav-links {
         display: flex;
         flex-direction: column; 
         gap: 1em; 
     }
 
-    .navbar .login-link {
-        padding: 1em 2em;
+    .image-section #home-image1 {
+        max-width: 350px; 
     }
 
-    .navbar .register-link {
-        padding: 1em 2em; 
-    }
 }
