--- a/healthconnect/templates/layout.html
+++ b/healthconnect/templates/layout.html
@@ -21,14 +21,14 @@
         </div>
         <div class="nav-links">
             {% if user.is_authenticated %}
-                <a href="{% url 'profile' %}" class="login-link">Profile</a>
+                <button onclick="location.href='{% url 'profile' %}'" class="login-link">Profile</button>
                 <form action="{% url 'logout' %}" method="post" style="display:inline;">
                     {% csrf_token %}
                     <button type="submit" class="logout-link">Logout</button>
                 </form>
             {% else %}
-                <a href="{% url 'login' %}" class="login-link">Login</a>
-                <a href="{% url 'register' %}" class="register-link">Register</a>
+                <button onclick="location.href='{% url 'login' %}'" class="login-link">Login</button>
+                <button onclick="location.href='{% url 'register' %}'" class="register-link">Register</button>
             {% endif %}
         </div>
     </nav>
