--- a/healthconnect/static/css/styles.css
+++ b/healthconnect/static/css/styles.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
 }
 
 main {
-    padding-inline: 10%;
+    padding-inline: 15%;
 }
 
 .navbar {
@@ -50,6 +53,7 @@ main {
 
 .navbar .nav-link:hover {
     text-decoration: none; 
+    color: rgb(174, 0, 255);
 }
 
 /* Login button styling */
@@ -100,14 +104,6 @@ main {
     text-decoration: none; 
 }
 
-/* Home styles */
-.image-section img {
-    max-width: 500px; 
-    height: auto;
-    margin-top: -110px;
-    float: right; 
-}
-
 @media (max-width: 1024px) {
     
     .navbar .nav-links {
@@ -121,3 +117,31 @@ main {
     }
 
 }
+
+
+
+/* Cantarell font styles */
+.cantarell-regular {
+    font-family: "Cantarell", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .cantarell-bold {
+    font-family: "Cantarell", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .cantarell-regular-italic {
+    font-family: "Cantarell", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .cantarell-bold-italic {
+    font-family: "Cantarell", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
