Home page footer

--- a/healthconnect/templates/home.html
+++ b/healthconnect/templates/home.html
@@ -9,9 +9,33 @@ Home
 {% block content %}
 <div class="top-content">
     <div class="top-text">
-        <h1>A heritage in care.<br>A reuptation in<br>excellence.</h1>
+        <h1>A heritage in care.<br>A reputation in<br>excellence.</h1>
         <p>Health Connect provides excellent services by prioritizing the safety and security of patients. Located in Spokane, Washington.</p>
     </div>
-    <img src="{% static 'images/home1.webp' %}" alt="Doctor" class="surgery-image">
+    <img src="{% static 'images/home/home1.webp' %}" alt="Doctor" class="surgery-image">
+</div>
+
+<!-- Footer Section -->
+<div class="footer-section">
+    <div class="footer-item">
+        <img src="{% static 'images/home/home_2.1.webp' %}" alt="Service 1">
+        <h3>JCI Accredited</h3>
+        <p>Best safety and security with JCI Accredited</p>
+    </div>
+    <div class="footer-item">
+        <img src="{% static 'images/home/home_2.2.webp' %}" alt="Service 2">
+        <h3>Best Service</h3>
+        <p>Provide excellent service and treatment for patients</p>
+    </div>
+    <div class="footer-item">
+        <img src="{% static 'images/home/home_2.3.webp' %}" alt="Service 3">
+        <h3>Affordable</h3>
+        <p>Treatment recommendations through personalized care plans.</p>
+    </div>
+    <div class="footer-item">
+        <img src="{% static 'images/home/home_2.4.webp' %}" alt="Service 4">
+        <h3>Top Facility</h3>
+        <p>Adequate facilities to support our services</p>
+    </div>
 </div>
 {% endblock %}
