--- a/healthconnect/static/css/home.css
+++ b/healthconnect/static/css/home.css
@@ -15,13 +15,49 @@ h1{
     margin-right: 2em; /* Add space between text and image */
 }
 
-.surgery-image{
+.surgery-image {
     width: 40%;
+    padding-bottom: 50px;
+}
+
+/* Footer section styling */
+.footer-section {
+    background-color: #00a7e9;
+    padding: 2em;
+    text-align: center;
+    flex-wrap: wrap; /* Allows items to wrap to the next line */
+    justify-content: space-around; /* Distributes items evenly */
+    display: flex;
+}
+
+.footer-item {
+    flex: 1; 
+    min-width: 150px; 
+    margin: 1em; 
+}
+
+.footer-item img {
+    max-width: 100px; 
+    height: auto; /* Maintains aspect ratio */
+}
+
+.footer-item h3 {
+    margin: 0.5em 0;
+    color: white;
+}
+
+.footer-item p {
+    margin: 0;
+    color: white;
 }
 
 @media (max-width: 1024px) {
     .main-content {
         flex-direction: column;
+        text-align: center;
+    }
+
+    .top-text {
         text-align: center;
     }
 }
@@ -30,4 +66,6 @@ h1{
     .surgery-image {
         display: none;
     }
+
+
 }
