--- a/healthconnect/static/css/styles.css
+++ b/healthconnect/static/css/styles.css
@@ -58,7 +58,7 @@ main {
 
 /* Login button styling */
 .navbar .login-link {
-    background-color: #00b6ff;
+    background-color: #00a7e9;
     padding: 1.3em 6em;
     border-radius: 5px;
     border: none;
@@ -68,7 +68,7 @@ main {
 }
 
 .navbar .login-link:hover {
-    background-color: blue;
+    background-color: #0040c9;
     text-decoration: none; 
 }
 
