--- a/healthconnect/static/css/styles.css
+++ b/healthconnect/static/css/styles.css
@@ -57,7 +57,9 @@ main {
 }
 
 /* Login button styling */
-.navbar .login-link {
+
+.navbar button {
+    font-family: 'Poppins', sans-serif;
     background-color: #00a7e9;
     padding: 1.3em 6em;
     border-radius: 5px;
@@ -75,12 +77,6 @@ main {
 /* Register button styling */
 .navbar .register-link {
     background-color: #ff7800;
-    padding: 1.3em 6em;
-    border-radius: 5px;
-    border: none;
-    color: white;
-    text-decoration: none;
-    cursor: pointer; 
 }
 
 .navbar .register-link:hover {
@@ -91,12 +87,6 @@ main {
 /* Logout button styling */
 .navbar .logout-link {
     background-color: #ff6666;
-    padding: 1.3em 6em;
-    border-radius: 5px;
-    border: none;
-    color: white;
-    text-decoration: none;
-    cursor: pointer; 
 }
 
 .navbar .logout-link:hover {
