--- a/healthconnect/templates/services.html
+++ b/healthconnect/templates/services.html
@@ -11,12 +11,12 @@ Services
     <li>
         <h3>Scheduling Appointments</h3>
         <p>Easily book appointments with our medical professionals through our user-friendly scheduling system.</p>
-        <button onclick="location.href='{% url 'book-appointment' %}'">Book an Appointment</button>
+        <button onclick="location.href='{% url 'book_appointment' %}'">Book an Appointment</button>
     </li>
     <li>
         <h3>View Medical Records</h3>
         <p>Access your medical records securely and conveniently online, ensuring you have all your health information at your fingertips.</p>
-        <button onclick="location.href='{% url 'medical-record' %}'">View Medical Records</button>
+        <button onclick="location.href='{% url 'medical_record' %}'">View Medical Records</button>
     </li>
 </ul>
 {% endblock %}
