--- a/healthconnect/static/css/styles.css
+++ b/healthconnect/static/css/styles.css
@@ -41,7 +41,7 @@ main {
 /* Links container */
 .navbar .nav-links {
     display: flex;
-    gap: 1em;
+    gap: 2em;
 }
 
 /* General nav link styling */
@@ -49,11 +49,13 @@ main {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    transition: transform 0.3s ease, background-color 0.3s ease; 
+    position: relative; 
 }
 
 .navbar .nav-link:hover {
-    text-decoration: none; 
-    color: rgb(174, 0, 255);
+    color: rgb(174, 0, 255); 
+    transform: scale(1.3); 
 }
 
 /* Login button styling */
