--- a/healthconnect/apps/patients/templates/patient_services.html
+++ b/healthconnect/apps/patients/templates/patient_services.html
@@ -16,7 +16,7 @@ Patient Services
     <li>
         <h3>View Medical Records</h3>
         <p>Access your medical records securely and conveniently online, ensuring you have all your health information at your fingertips.</p>
-        <button onclick="location.href='{% url 'medical_record' %}'">View Medical Records</button>
+        <button onclick="location.href='{% url 'medical_history' %}'">View Medical History</button>
     </li>
 </ul>
 {% endblock %}
