--- a/healthconnect/apps/patients/templates/patient_services.html
+++ b/healthconnect/apps/patients/templates/patient_services.html
@@ -6,7 +6,7 @@ Patient Services
 {% endblock %}
 
 {% block extra_styles %}
-<link rel="stylesheet" href="{% static 'css/patient-services.css' %}">
+<link rel="stylesheet" href="{% static 'css/services.css' %}">
 {% endblock %}
 
 {% block content %}
