--- a/healthconnect/apps/doctors/templates/list_patients.html
+++ b/healthconnect/apps/doctors/templates/list_patients.html
@@ -1,5 +1,9 @@
-{% for patient in patients %}
-    <p>Patient Username: {{ patient.username }}</p>
-    <p>Patient Name: {{ patient.full_name }}</p>
-    <a href="{% url 'update_medical_record' patient.username %}">Update Records for {{ patient.full_name }}</a>
-{% endfor %}
+{% extends "layout.html" %}
+
+{% block content %}
+    {% for patient in patients %}
+        <p>Patient Username: {{ patient.username }}</p>
+        <p>Patient Name: {{ patient.full_name }}</p>
+        <a href="{% url 'update_medical_record' patient.username %}">Update Records for {{ patient.full_name }}</a>
+    {% endfor %}
+{% endblock %}
