Pharmacist prescription approval

--- a/healthconnect/apps/pharmacists/templates/pharmacist_services.html
+++ b/healthconnect/apps/pharmacists/templates/pharmacist_services.html
@@ -1,22 +1,24 @@
 {% extends 'layout.html' %}
 
+{% load static %}
 {% block title %}
 Pharmacist Services
 {% endblock %}
 
+{% block extra_styles %}
+<link rel="stylesheet" href="{% static 'css/services.css' %}"> 
+{% endblock %}
+
 {% block content %}
-<h1>Services</h1>
-<p>Our hospital offers a range of services designed to provide comprehensive and efficient care for our patients. The key services we provide include:</p>
-<ul>
-    <li>
-        <h3>Scheduling Appointments</h3>
-        <p>Easily book appointments with our medical professionals through our user-friendly scheduling system.</p>
-        <button onclick="location.href='{% url 'book_appointment' %}'">Book an Appointment</button>
-    </li>
-    <li>
-        <h3>View Medical Records</h3>
-        <p>Access your medical records securely and conveniently online, ensuring you have all your health information at your fingertips.</p>
-        <button onclick="location.href='{% url 'medical_record' %}'">View Medical Records</button>
+<h1>Pharmacist Services</h1>
+<ul class="services-list">
+    <li class="service-item">
+        <img src="{% static 'images/pills_icon.webp' %}" alt="Pill Bottle" class="service-icon">
+        <div class="service-text">
+            <h3>Review Prescription Requests</h3>
+            <p>Review patient prescription requests made by doctors.</p>
+            <button onclick="location.href='{% url 'review_prescriptions' %}'">Review</button>
+        </div>
     </li>
 </ul>
 {% endblock %}
